# bookstore

./: .gitignore  Dockerfile  docker-compose.yml  gerar_log.py  heroku.yml  pyproject.toml  pytest.ini  requirements.txt  wait-for-it.sh
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yaml
api/: factories.py  urls.py
api/models/: product.py  user.py
api/serializers/: product_serializer.py  user_serializer.py
api/tests/: test_product.py  test_product_serializer.py  test_user.py
api/viewsets/: product_viewset.py
bookstore/: settings.py  urls.py  views.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/: __init__.py
order/tests/test_viewsets/: __init__.py  test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_category_description_alter_product_description_and_more.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: __init__.py
product/tests/test_viewsets/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
